# kira-nuclearqc

./: .gitignore  Cargo.toml  METRICS.md  PIPELINE.md  README.md
src/: main.rs  tracing.rs
src/input/: barcodes.rs  cache.rs  features.rs  meta.rs  mod.rs  mtx.rs  organelle_bin.rs  tests.rs
src/metrics/: mod.rs
src/metrics/genome_stability/: aggregate.rs  panels.rs  scores.rs
src/model/: axes.rs  ddr.rs  drivers.rs  flags.rs  mod.rs  regimes.rs  scores.rs  thresholds.rs
src/panels/: defs.rs  loader.rs  mapping.rs  mod.rs  tests.rs
src/pipeline/: mod.rs  stage2_normalize.rs  stage3_panels.rs  stage4_axes.rs  stage5_scores.rs  stage6_classify.rs  stage7_report.rs
src/report/: json.rs  mod.rs  text.rs
src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
tests/src_inline/: main_inline.rs
tests/src_inline/input/: organelle_bin.rs
tests/src_inline/model/: ddr.rs
tests/src_inline/pipeline/: stage2_normalize.rs  stage3_panels.rs  stage4_axes.rs  stage5_scores.rs  stage6_classify.rs  stage7_report.rs
tests/src_inline/report/: mod.rs
tests/src_inline/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
