[package]
name = "kira-nuclearqc"
description = "Deterministic CLI for nuclear state and transcriptional plasticity analysis from 10x scRNA-seq MTX inputs."
version = "0.1.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-nuclearqc"
keywords = [
    "bioinformatics",
    "oncology",
    "quality-control",
    "cell",
    "nucleus"
]
categories = [
    "science",
    "science::bioinformatics",
    "command-line-utilities",
    "algorithms"
]

[dependencies]
memmap2 = "0.9"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
kira-shared-sc-cache = "0.1"
kira-scio = "0.1"
